center everything through css and adding div in the html

--- a/style.css
+++ b/style.css
@@ -1,12 +1,33 @@
 
+#title, #description{
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    border: 3px solid #FFFFFF;
+}
+#first-part{
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    border: 3px solid #FFFFFF;
+    padding: 20px;
+}
+
 #select{
     margin-left: auto;
     margin-right: auto;
     width: 25%;
-    border: 3px solid #73AD40;
+    border: 3px solid #FFFFFF;
     padding: 20px;
 }
 
+#dropdown{
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    border: 3px solid #FFFFFF;
+    padding: 20px;
+}
 
 .space{
     padding-bottom: 10px;
@@ -16,7 +37,12 @@
     margin-left: auto;
     margin-right: auto;
     width: 25%;
-    border: 3px solid #73AD21;
     padding: 20px;
     
+}
+#end{
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    padding: 20px;
 }
